--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,29 @@
   object-fit: cover
 }
 
- a {
-   text-decoration: none;
- }
+a {
+  text-decoration: none;
+}
+
+.pswp-gallery.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gallery-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-wrapper {
+  flex: 0 0 auto;
+}
+
+.image-wrapper img {
+  object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
+}
