fine tuned the image dim

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,7 +3,7 @@ const { img, title, subtitle, btnLink, width, height } = Astro.props;
 ---
 
 <div class="col py-3">
-  <div class="card h-100">
+  <div class="card h-100 shadow">
     <div class="ratio ratio-16x9">
       <img
         src={img}
