--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,9 +1,9 @@
 ---
-import type { CollectionEntry } from 'astro:content';
+import type { CollectionEntry } from "astro:content";
 import { Image } from "astro:assets";
 
 interface Props {
-	project: CollectionEntry<'projects'>;
+  project: CollectionEntry<"projects">;
 }
 
 const { data, slug } = Astro.props.project;
