--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,20 +1,16 @@
 ---
-import { getCollection } from 'astro:content';
+import { getCollection } from "astro:content";
 
 import BaseLayout from "@layouts/BaseLayout.astro";
-import ProjectCard from '@components/ProjectCard.astro';
+import ProjectCard from "@components/ProjectCard.astro";
 
-const projects = (await getCollection('projects')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+const projects = (await getCollection("projects")).sort(
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
 ---
 
 <BaseLayout>
   <div class="row m-3 row-cols-1 row-cols-md-2 row-cols-lg-3">
-		{
-			projects.map((project) => (
-				<ProjectCard project={project} />
-			))
-		}
+    {projects.map((project) => <ProjectCard project={project} />)}
   </div>
 </BaseLayout>
